--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                     </div>
 
                 </div>
-                <div id="kartica" class="kartica2">
+                <div id="kartica" class="kartica2" background:
+                    url(https://www.antikvarijat-phoenix.com/pic_nas/12412.jpg)>
                     <p class="red"><b>Naziv : Ninja</b></p>
                     <p class="red">Autor : Eric Van Lustbader</p>
                     <p class="red">Godina izdanja : 1990</p>
@@ -51,7 +52,8 @@
 
                     </div>
                 </div>
-                <div id="kartica" class="kartica3">
+                <div id="kartica" class="kartica3"
+                    background:url(https://www.delfi.rs/_img/artikli/knjige/300/vv/delfi_predstava_za_gospodara_kolin_mekalou.jpg)>
                     <p class="red"><b>Naziv : Predstava za gospodara</b></p>
                     <p class="red">Autor : Kolin Mekalou</p>
                     <p class="red">Godina izdanja : 2003</p>
@@ -63,7 +65,8 @@
 
                     </div>
                 </div>
-                <div id="kartica" class="kartica4">
+                <div id="kartica" class="kartica4" background:
+                    url(https://www.laguna.rs/_img/korice/3234/bajke_hansa_kristijana_andersena-hans_kristijan_andersen_v.jpg)>
                     <p class="red">Naziv : <b>Bajke</b></p>
                     <p class="red">Autor : <b>Hans Kristijan Andersen</b></p>
                     <p class="red">Godina izdanja : 1989</p>
@@ -74,7 +77,8 @@
 
                     </div>
                 </div>
-                <div id="kartica" class="kartica5">
+                <div id="kartica" class="kartica5" background:
+                    url(https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1553278071l/22049772._SX318_.jpg)>
                     <p class="red"><b>Naziv : Mac od sanare</b></p>
                     <p class="red">Autor : Teri Bruks</p>
                     <p class="red">Godina izdanja : 2003</p>
