--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
 
         <div id="rest" class="veliki">
             <div id="left-side" class="menu">
-                <h3>Menu</h3>
-                <p>Komedija</p>
-                <p>Horor</p>
-                <p>Epska fantastika</p>
-                <p>Istorijski</p>
-                <p>Akcija</p>
-                <p>Decije knjige</p>
+                <ul>
+                    <h3>Menu</h3>
+
+                    <li>Komedija</li>
+                    <li>Horor</li>
+                    <li>Epska fantastika</li>
+                    <li>Istorijski</li>
+                    <li>Akcija</li>
+                    <li>Decije knjige</li>
+                </ul>
             </div>
             <div id="right-side" class="knjige">
                 <div id="kartica" class="kartica1" background:
