--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="G:\Frontend\react projekat\Domaci2\index.css" />
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        </head>
 
 <body>
     <div>
@@ -36,7 +37,13 @@
                     <p class="red">Godina izdanja : 2000</p>
                     <br />
                     <div id="knjiga" class="rejting">
-                        <span class="ocena">Oceni</span>
+                        <div class="star_rating">Oceni
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <button class="podesavanje">...</button>
 
                     </div>
@@ -50,7 +57,13 @@
                     <br />
 
                     <div id="knjiga" class="rejting">
-                        <span class="ocena">Oceni</span>
+                        <div class="star_rating">Oceni
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <button class="podesavanje">...</button>
 
                     </div>
@@ -63,7 +76,13 @@
                     <br />
 
                     <div id="knjiga" class="rejting">
-                        <span class="ocena">Oceni</span>
+                        <div class="star_rating">Oceni
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <button class="podesavanje">...</button>
 
                     </div>
@@ -75,7 +94,13 @@
                     <p class="red">Godina izdanja : 1989</p>
                     <br />
                     <div id="knjiga" class="rejting">
-                        <span class="ocena">Oceni</span>
+                        <div class="star_rating">Oceni
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <button class="podesavanje">...</button>
 
                     </div>
@@ -88,7 +113,13 @@
                     <br />
 
                     <div id="knjiga" class="rejting">
-                        <span class="ocena">Oceni</span>
+                        <div class="star_rating">Oceni
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <button class="podesavanje">...</button>
 
                     </div>
